--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "body-parser": "^1.20.3",
+    "emailjs-com": "^3.2.0",
+    "express": "^4.21.0",
+    "nodemailer": "^6.9.15"
   }
 }
